--- a/app/views/home/_bike.html.erb
+++ b/app/views/home/_bike.html.erb
@@ -1,4 +1,4 @@
 
 
-	<%=image_tag("#{@picture[@current_item]}", :width => 500, :height => 300 )%>  
+	<%=image_tag("#{@picture[@index.value]}", :width => 500, :height => 300 )%>  
 
